# fallout2-parser

./: .gitignore  README.md  fallout-parser.cabal  stack.yaml
app/: Main.hs
data/: worldmap.txt
src/Fallout2/: Parser.hs  Types.hs
src/Fallout2/Parser/: Internal.hs  KeyVal.hs  Permutation.hs  Tokens.hs
test/: Spec.hs
