name:                   fallout-parser
version:                0.1.0.0
synopsis:               parser for the Fallout 2 world file
cabal-version:          >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Fallout2.Parser
                      , Fallout2.Types
  other-modules:        Fallout2.Parser.Tokens
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , aeson
                      , containers
                      , text
  default-language:     Haskell2010

executable main
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , fallout-parser
                      , aeson
  default-language:     Haskell2010

test-suite simple-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , fallout-parser
                      , hspec
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/jonplussed/fallout-parser
